--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -199,7 +199,7 @@
                                  <tr *ngFor="let group of infracookbookForm.value.cookbooklist; let i=index">
                                    <td [formGroupName]=i>
                                      <div class="custom-control custom-checkbox">
-                                       <input type="checkbox" class="custom-control-input" [checked]="group.isSelectedToSave" id={{group.group}} >
+                                       <input type="checkbox" class="custom-control-input" [checked]="group.isSelectedToSave" id={{group.group}} formControlName="isSelectedToSave">
                                        <label class="custom-control-label" for={{group.group}}>{{group.group}}</label>
                                      </div>
                                    </td>
@@ -287,7 +287,7 @@
                                   <tbody>
                                    <ng-container *ngFor="let cookbook of apmcookbookForm.value.cookbooklist; let i=index"> 
                                      <tr [formGroupName]="i">
-                                       <td>
+                                       <td *ngIf="cookbook.isSelectedToSave">
                                          <i class="fas fa-caret-down"></i> <input type="text" formControlName="group" value="{{cookbook.group}}" class="border0" readonly>
                                          <!-- <input type="text" class="btn btn-default" value="0" autofocus="true" formControlName="averageWeight"> -->
                                          <table class="table-sm" formArrayName="metrics" >
@@ -362,7 +362,7 @@
                                    <tbody>
                                     <ng-container *ngFor="let cookbook of infracookbookForm.value.cookbooklist; let i=index"> 
                                       <tr [formGroupName]="i">
-                                        <td>
+                                        <td *ngIf="cookbook.isSelectedToSave">
                                           <i class="fas fa-caret-down"></i> <input type="text" formControlName="group" value="{{cookbook.group}}">
                                           <!-- <input type="text" class="btn btn-default" value="0" autofocus="true" formControlName="averageWeight"> -->
                                           <table class="table-sm" formArrayName="metrics" >
