Fix - Log analysis refresh after InProgress, Status color coding, metric template button color changes

--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -125,7 +125,7 @@
                    </div>
                 </div>
                 <div class="display-save-btn">
-                <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right">Next</button>
+                <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right btn-color">Next</button>
                 </div>
                 
                 <!-- <div class="display-save-btn">
